--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react-dom": "^18.2.0",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "circuit-js": "^0.0.3-alpha",
+    "nodejs": "^0.0.0"
   }
 }
